--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,6 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Dorgesh-Kaan Agility Course
+author=Anderzenn
+support=https://github.com/Anderzenn/dorgesh-kaan-agility-course/issues
+description=Plugin that provides quality of life information to-do with the Dorgesh-Kaan agility course.
+tags=agility,dorgesh-kaan,dorgesh,kaan,dorgeshkaan,helper,agilityhelper,course,agilitycourse,agility course
+plugins=com.anderzenn.dorgeshkaanagilitycourse.DorgeshKaanAgilityCourse
